# ring

./: .gitignore  AGENTS.md  PLAN.md  biome.json  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  renovate.json  tsconfig.base.json  turbo.json
.agents/skills/design-system/: SKILL.md
.claude/agents/: review.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  dependabot-lockfile.yml  opencode.yml
apps/api/: .env.example  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma  seed.ts
apps/api/scripts/: import-rings.ts  with-db.ts
apps/api/src/: db.ts  dev-catalog.ts  index.ts  logger.ts  push.ts  router.ts
apps/api/tests/: auth.test.ts  couple.test.ts  global-setup.ts  http.test.ts  logger.test.ts  match.test.ts  middleware.test.ts  push.test.ts  ring.test.ts  setup.ts  swipe.test.ts  user.test.ts
apps/crawler/: .env.example  .gitignore  pyproject.toml
apps/crawler/src/: cli.py  downloader.py  engine.py  extractor.py  models.py  normalizer.py
apps/crawler/src/jewelers/: registry.py
apps/mobile/: app.json  metro.config.cjs  metro.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/mobile/app/: _layout.tsx  index.tsx  login.tsx  swipe.tsx
apps/mobile/app/(auth)/: _layout.tsx  login.tsx  signup.tsx  welcome.tsx
apps/mobile/e2e/: login.yaml  swipe-flow.yaml  user-list.yaml
apps/mobile/tests/: setup.ts
apps/mockup/: AGENT_DESIGN_GUARDIAN.md  design-system.json  login.html  specs.json  swipe.html
(+45 files in other folders)
