[project]
name = "ring-crawler"
version = "0.1.0"
description = "Crawl engagement rings from top French jewelers (low/mid/high tier)"
requires-python = ">=3.11"
dependencies = [
  "crawl4ai[all]>=0.8.0",
  "pydantic>=2.0",
  "httpx>=0.27",
  "aiofiles>=24.0",
  "rich>=13.0",
  "click>=8.0",
]

[project.scripts]
ring-crawl = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
